--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -201,3 +201,41 @@ body{
       --bs-btn-disabled-bg: #8a469b;
       --bs-btn-disabled-border-color: #723a80;
     }  
+
+    ul {
+      list-style-type: none;
+    }
+
+    .mainimage {
+      display: block;
+      width: 50%;
+      height: 50%;
+    }
+
+    .image2 {
+      display: block;
+      width: 50%;
+      height: 50%;
+    }
+
+    .photos {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    
+    .tile {
+      height: 20vh;
+      flex-grow: 1;
+      overflow: hidden;
+    }
+    
+    .image {
+      max-height: 100%;
+      min-width: 100%;
+      object-fit: cover;
+      vertical-align: bottom;
+    }
+
+    .photos:last-child {
+      flex-grow: 10;
+    }
