Wiele dodatkowych pól w ofertach, update tworzenia oferty, bugfix w rejestracji

--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -305,3 +305,13 @@ body{
         width: 100%;
       }
     }
+
+  .bigcheckbox{
+    /* Double-sized Checkboxes */
+    -ms-transform: scale(2); /* IE */
+    -moz-transform: scale(2); /* FF */
+    -webkit-transform: scale(2); /* Safari and Chrome */
+    -o-transform: scale(2); /* Opera */
+    padding: 20px;
+    margin: 20px;
+  }
