--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -315,3 +315,11 @@ body{
     padding: 20px;
     margin: 20px;
   }
+
+  .right {
+    position: absolute;
+    top: 40px;
+    right: -125px;
+    width: 300px;
+    padding: 10px;
+  }
