--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -60,7 +60,7 @@ body{
   .nav-link{
     color:white;
   }
-  
+
 //   .nav-link:hover{
 //     color:white;
 //     // background-color:rgba(0,0,0,.5) !important;
@@ -118,11 +118,12 @@ body{
   }
 
   .card{
-    margin-top: 6vh;
+    margin-top: 3vh;
     margin-bottom: 10vh;
     background-color: rgba(0,0,0,.65) !important;
     color: white;
     align-content: center;
+    padding-bottom: 1%;
     }
 
     #titlerow{
@@ -322,4 +323,136 @@ body{
     right: -125px;
     width: 300px;
     padding: 10px;
+  }
+
+  @media (min-width: 769px) {
+    .leftbox {
+      float:left; 
+      width:70%;
+      padding-left: 1.5%;
+    }
+    .rightbox{
+        float:right;
+        width:30%;
+        height:100%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .leftbox {
+      display: block;
+          float:inline-start; 
+          width:80%;
+          margin-left: auto;
+          margin-right: auto;
+    }
+    .rightbox{
+      float:left;
+      width:100%;
+    }
+  }
+
+  .mainimagelook {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  /* Float to the right on screens that are equal to or greater than 769px wide */
+  .card2 {
+    background-color: rgba(0, 0, 0, 0.5) !important;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+  }
+
+  
+  .card2:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .card-body2 {
+    padding: 20px;
+  }
+  
+  .card-text2 {
+    font-size: 1em;
+    color: #666;
+    margin-bottom: 20px;
+  }
+  
+  .pricing {
+    display: flex;
+    align-items: baseline;
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+  
+  .price {
+    color: #00b894;
+    margin-right: 5px;
+  }
+  
+  .period {
+    color: #666;
+    font-size: 0.9em;
+  }
+  
+  button.btn2 {
+    padding: 10px 20px;
+    // background-color: rgba(203, 112, 255, 0.65) !important;
+    background-color: #00b894;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  button.btn2:hover {
+    background-color: #00ccad;
+  }
+
+  .card-header h5 {
+    margin: 0;
+    font-size: 1.1em;
+    font-weight: bold;
+    margin-left: 0.15%;
+  }
+
+  .card-header {
+    background-color: #046988b6;
+    color: #fff;
+    padding: 2px;
+  }
+
+  .card-body3 {
+    padding: 20px;
+  }
+  
+  .card-body3 p {
+    font-size: 1em;
+    line-height: 1.5;
+    margin-left: 1.9%;
+  }
+
+  .upperlinks{
+    padding-left: 20%;
+  }
+
+  .lastmin{
+    margin: auto;
+    padding-left: 24%;
+    color: #c94c4c;
+  }
+
+  .prom{
+    color: #d8e128;
   }
