--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -692,9 +692,29 @@ body{
         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     }
     input[type="date"]:focus {
-        color: #495057;
-        background-color: #fff;
-        border-color: #80bdff;
-        outline: 0;
-        box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
-      }
+      color: #495057;
+      background-color: #fff;
+      border-color: #80bdff;
+      outline: 0;
+      box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+    }
+
+    .biggerbtn {
+      padding: 10px 20px 10px 20px;
+    }
+    
+    .form-check2 {
+      position: relative;
+      display: block;
+      padding-left: 2.5rem;
+    }
+
+    .form-check2-input {
+      position: absolute;
+      margin-top: .3rem;
+      margin-left: -1.25rem;
+    }
+    .form-check2-input:checked ~ .form-check-label {
+        color: #36be78;
+        font-weight: 700;
+    }
