Poprawa responsywności kart na malych ekranach

--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -505,6 +505,14 @@ body{
     }
   }
 
+  @media (max-width: 1190px) {
+    @media (min-width: 768px) {
+      .card-body5{
+        width:170%;
+      }
+    }
+  }  
+
   // .leftbox {
   //   display: block;
   //       float:inline-start; 
