--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -726,3 +726,8 @@ body{
         color: #36be78;
         font-weight: 700;
     }
+
+    small.form-text.text-muted2{
+      // font-size:larger;
+      color:greenyellow;
+    }
