*Fix błędu w walidacji w edycji oferty

--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -728,6 +728,5 @@ body{
     }
 
     small.form-text.text-muted2{
-      // font-size:larger;
-      color:greenyellow;
+      color:rgba(149, 201, 70, 0.853);
     }
