Kraj-link główny wiok ofert

--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -730,3 +730,24 @@ body{
     small.form-text.text-muted2{
       color:rgba(149, 201, 70, 0.853);
     }
+
+    a.nav-link2:link
+    {
+       color: #00fb97;
+       text-decoration: none;
+    }
+    a.nav-link2:visited
+    {
+       color: #00fb97;
+       text-decoration: none;
+    }
+    a.nav-link2:hover
+    {
+       color: #00fb97;
+       text-decoration: none;
+    }
+    a.nav-link2:active
+    {
+       color: #00fb97;
+       text-decoration: none;
+    }
