--- a/biuropodrozy/resources/sass/app.scss
+++ b/biuropodrozy/resources/sass/app.scss
@@ -770,3 +770,11 @@ body{
         color: #0074D9;
         font-weight: bold;
     }
+
+    #mainphoto{
+      max-height: 250px;
+    }
+
+    #myTable{
+      width:100%;
+    }
